--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
+    "humanize-duration": "^3.33.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.3.2",
